syntax = "proto3";

option go_package = "./taskpb";

package task;

service TodoService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc ReadTask(ReadTaskRequest) returns (ReadTasksResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (ReadTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (EmptyResponse);
}

message CreateTaskRequest {
  int64 user_id = 1;
  string title = 2;
  string description = 3;
  string progress = 4;
  string priority = 5;
}

message ReadTaskRequest {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string description = 4;
  string progress = 5;
  string priority = 6;
}

message UpdateTaskRequest {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string description = 4;
  string progress = 5;
  string priority = 6;
}

message DeleteTaskRequest {
  int64 id = 1;
}

message CreateTaskResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message ReadTasksResponse {
    repeated ReadTaskResponse tasks = 1;
}

message ReadTaskResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string progress = 4;
  string priority = 5;
}

message EmptyResponse {}
